<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="11dp"
        android:text="@string/title" />

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enterTitle"
        android:layout_below="@+id/textViewTitle"
        android:layout_alignStart="@+id/textViewTitle"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textViewDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editTextTitle"
        android:layout_below="@+id/editTextTitle"
        android:text="@string/description" />

    <EditText
        android:id="@+id/editTextDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textViewDesc"
        android:layout_below="@+id/textViewDesc"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enterDescription"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editTextDesc"
        android:layout_centerVertical="true"
        android:layout_below="@+id/editTextDesc"
        android:text="@string/date" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/editTextDesc"
        android:ems="10"
        android:layout_toEndOf="@+id/textViewDate"
        android:inputType="date" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/textViewDate"
        android:layout_below="@id/editTextDate"
        android:text="@string/amount"
        android:id="@+id/textviewAmt"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/editTextDate"
        android:minWidth="150dp"
        android:id="@+id/editTextAmt"/>


    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/currency"
        android:layout_below="@id/editTextDate"
        android:layout_toEndOf="@id/textviewAmt"
        android:layout_toStartOf="@+id/editTextAmt"
        android:id="@+id/spnAmt"/>



</RelativeLayout>